<resources>
    <string name="app_name">ProximaTrilhaV1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_my_location">My Location</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="enter_your_email">Insira um email valido</string>
    <string name="enter_your_password">Insira um password valido</string>
    <string name="registering_user">Efetuando o cadastro</string>
    <string name="sign_in">Login</string>
    <string name="sign_out">Sair</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Cadastrar</string>
    <string name="successfully_registred">Cadastrado com sucesso!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="registration_error">Ocorreu erro no cadastro.</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
</resources>
